--- a/Makefile.in
+++ b/Makefile.in
@@ -76,6 +76,10 @@ MAINT = @MAINT@
 MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
 MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
+MCS_CLIENT_CFLAGS = @MCS_CLIENT_CFLAGS@
+MCS_CLIENT_LIBS = @MCS_CLIENT_LIBS@
+MCS_MANAGER_CFLAGS = @MCS_MANAGER_CFLAGS@
+MCS_MANAGER_LIBS = @MCS_MANAGER_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
@@ -594,7 +598,7 @@ uninstall-info: uninstall-info-recursive
 distclean-local:
 	rm -rf xfce4rc xfce4.spec *.cache
 
-xfce4rc:
+xfce4rc: example.xfce4rc.in
 	@sed -e "s%_pkgdatadir_%$(pkgdatadir)%g" example.xfce4rc.in > xfce4rc
 
 rpm: dist
