--- a/plugins/switcher/Makefile.in
+++ b/plugins/switcher/Makefile.in
@@ -76,6 +76,10 @@ MAINT = @MAINT@
 MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
 MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
+MCS_CLIENT_CFLAGS = @MCS_CLIENT_CFLAGS@
+MCS_CLIENT_LIBS = @MCS_CLIENT_LIBS@
+MCS_MANAGER_CFLAGS = @MCS_MANAGER_CFLAGS@
+MCS_MANAGER_LIBS = @MCS_MANAGER_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
@@ -139,7 +143,7 @@ libswitcher_la_SOURCES = \
 switcher.c
 
 
-libswitcher_la_CFLAGS = -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
+libswitcher_la_CFLAGS = -Wall -I../../panel @CFLAGS@ @X_CFLAGS@ @BASE_DEPENDENCIES_CFLAGS@ -DG_DISABLE_DEPRECATED -DDATADIR=\"$(pkgdatadir)\" -DLIBDIR=\"$(pkglibdir)\"
 libswitcher_la_LIBADD = @LIBS@ @X_LIBS@  @BASE_DEPENDENCIES_LIBS@
 subdir = plugins/switcher
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
