--- a/themes/Noia/Makefile.in
+++ b/themes/Noia/Makefile.in
@@ -76,6 +76,10 @@ MAINT = @MAINT@
 MAINTAINER_MODE_FALSE = @MAINTAINER_MODE_FALSE@
 MAINTAINER_MODE_TRUE = @MAINTAINER_MODE_TRUE@
 MAKEINFO = @MAKEINFO@
+MCS_CLIENT_CFLAGS = @MCS_CLIENT_CFLAGS@
+MCS_CLIENT_LIBS = @MCS_CLIENT_LIBS@
+MCS_MANAGER_CFLAGS = @MCS_MANAGER_CFLAGS@
+MCS_MANAGER_LIBS = @MCS_MANAGER_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
